--- a/app/src/main/res/navigation/graph.xml
+++ b/app/src/main/res/navigation/graph.xml
@@ -61,11 +61,26 @@
         <action
             android:id="@+id/action_learnFragment_to_tutorialFragment"
             app:destination="@id/tutorialFragment" />
+        <action
+            android:id="@+id/action_learnFragment_to_puzzleDirectoryFragment"
+            app:destination="@id/puzzleDirectoryFragment" />
     </fragment>
     <fragment
         android:id="@+id/josekiExplorerFragment"
         android:name="io.zenandroid.onlinego.ui.screens.joseki.JosekiExplorerFragment"
         android:label="JosekiExplorerFragment" />
+    <fragment
+        android:id="@+id/puzzleDirectoryFragment"
+        android:name="io.zenandroid.onlinego.ui.screens.puzzle.PuzzleDirectoryFragment"
+        android:label="PuzzleDirectoryFragment" />
+    <fragment
+        android:id="@+id/puzzleSetFragment"
+        android:name="io.zenandroid.onlinego.ui.screens.puzzle.PuzzleSetFragment"
+        android:label="PuzzleSetFragment" />
+    <fragment
+        android:id="@+id/tsumegoFragment"
+        android:name="io.zenandroid.onlinego.ui.screens.puzzle.TsumegoFragment"
+        android:label="TsumegoFragment" />
     <fragment
         android:id="@+id/gameFragment"
         android:name="io.zenandroid.onlinego.ui.screens.game.GameFragment"
