--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.Material3.DayNight">
+    <style name="AppTheme" parent="Theme.Material3.DynamicColors.DayNight">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
@@ -13,29 +13,11 @@
         <item name="android:textColor">@color/colorText</item>
 
         <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
         <item name="android:windowBackground">@color/colorOffWhite</item>
     </style>
 
-    <style name="LoginLabel" >
-        <!-- Hint color and label color in FALSE state -->
-        <item name="android:textColorHint">#F1F1F1</item>
-        <item name="android:textSize">20sp</item>
-        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
-        <item name="colorAccent">#F1F1F1</item>
-        <item name="colorControlNormal">#F1F1F1</item>
-        <item name="colorControlActivated">#F1F1F1</item>
-
-    </style>
-
-    <style name="LoginActivity" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="android:windowBackground">@color/loginBackground</item>
-    </style>
-
-    <style name="AIChatButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
-        <item name="android:paddingLeft">0dp</item>
-        <item name="android:paddingRight">0dp</item>
+    <style name="Theme.Splash" parent="Theme.SplashScreen">
+        <item name="postSplashScreenTheme">@style/AppTheme</item>
     </style>
 
     <style name="Theme.AppCompat.Translucent">
@@ -44,48 +26,5 @@
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowAnimationStyle">@android:style/Animation</item>
-    </style>
-
-    <style name="SupporterReasonTitle">
-        <item name="android:textSize">14sp</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:layout_marginTop">24dp</item>
-        <item name="android:layout_marginLeft">64dp</item>
-        <item name="android:layout_marginRight">16dp</item>
-    </style>
-    <style name="SupporterReasonContent">
-        <item name="android:alpha">0.7</item>
-        <item name="android:textSize">12sp</item>
-        <item name="android:layout_marginTop">8dp</item>
-        <item name="android:layout_marginLeft">64dp</item>
-        <item name="android:layout_marginRight">16dp</item>
-        <item name="android:lineSpacingMultiplier">1.1</item>
-    </style>
-    <style name="SupporterFAQTitle" parent="SupporterReasonTitle">
-        <item name="android:layout_marginLeft">0dp</item>
-        <item name="android:layout_marginTop">16dp</item>
-    </style>
-    <style name="SupporterFAQContent" parent="SupporterReasonContent">
-        <item name="android:layout_marginLeft">0dp</item>
-        <item name="android:layout_marginTop">8dp</item>
-    </style>
-    <style name="RedSlider" parent="Widget.MaterialComponents.Slider">
-        <item name="materialThemeOverlay">@style/ThemeOverlay.App.Slider</item>
-    </style>
-    <style name="ThemeOverlay.App.Slider" parent="">
-        <item name="colorPrimary">@color/colorAccent</item>
-        <item name="colorOnSurface">@color/colorAccent</item>
-        <item name="android:textColor">#FFFFFF</item>
-    </style>
-    <style name="SupporterButton">
-        <item name="backgroundTint">@null</item>
-        <item name="android:background">@drawable/ic_background_linear</item>
-        <item name="icon">@drawable/ic_star</item>
-        <item name="iconGravity">textStart</item>
-        <item name="android:layout_gravity">center</item>
-        <item name="android:paddingTop">0dp</item>
-        <item name="android:paddingBottom">0dp</item>
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="iconTint">#FFFFFF</item>
     </style>
 </resources>
